--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -1,47 +1,11 @@
-name: "Schengen Slot Watcher"
+name: "Hello World Test"
 
 on:
-  schedule:
-    - cron: "*/5 * * * *"
   workflow_dispatch:
 
 jobs:
-  watch_slots:
+  say_hello:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: true
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4
-
-      - name: Run Schengen slot checker
-        env:
-          CITY_SLUG:      "dubai"
-          VISA_TYPE:      "tourism"
-          TARGET_COUNTRY: "Luxembourg"
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          CHAT_ID:        ${{ secrets.CHAT_ID }}
-          STATE_FILE:     "last_state.json"
-        run: |
-          python check_schengen.py
-
-      - name: Commit updated state.json if needed
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add last_state.json
-          git diff --cached --quiet || git commit -m "Update last_state.json"
-          git push origin HEAD:main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Print Hello
+        run: echo "Hello, GitHub Actions is working!"
