--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -1,11 +1,59 @@
-name: "Hello World Test"
+name: "Schengen Slot Watcher"
 
+# Run every 5 minutes (GitHub Actions minimum) + allow manual dispatch
 on:
+  schedule:
+    - cron: "*/5 * * * *"
   workflow_dispatch:
 
 jobs:
-  say_hello:
+  watch_slots:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Print Hello
-        run: echo "Hello, GitHub Actions is working!"
+      # 1) Checkout the repository so we have access to check_schengen.py
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+
+      # 2) Set up Python 3.x
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      # 3) Install required Python packages
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4
+
+      # 4) Run the slot checker script
+      - name: Run Schengen slot checker
+        env:
+          # Override these if you want a different country/city/visa
+          CITY_SLUG:      "dubai"
+          VISA_TYPE:      "tourism"
+          TARGET_COUNTRY: "Luxembourg"
+
+          # Required GitHub Secrets for Telegram notifications
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          CHAT_ID:        ${{ secrets.CHAT_ID }}
+
+          # Where the script reads/writes its state file
+          STATE_FILE:     "last_state.json"
+        run: |
+          python check_schengen.py
+
+      # 5) If last_state.json changed, commit & push it back to main
+      - name: Commit updated state.json if needed
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add last_state.json
+          git diff --cached --quiet || git commit -m "Update last_state.json"
+          git push origin HEAD:main
+        env:
+          # This built-in token allows the workflow to push commits back
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
