--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -1,6 +1,6 @@
 name: "Schengen Slot Watcher"
 
-# Schedule to run every 5 minutes (GitHub's minimum) plus allow manual dispatch.
+# Run every 5 minutes (minimum allowed by GitHub Actions), plus allow manual dispatch.
 on:
   schedule:
     - cron: "*/5 * * * *"
@@ -15,7 +15,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          # We need push permission so we can commit last_state.json back to main
           persist-credentials: true
 
       # ─── 2. Set up Python 3.x ─────────────────────────────────────────────
@@ -33,16 +32,16 @@ jobs:
       # ─── 4. Run the slot checker script ──────────────────────────────────
       - name: Run Schengen slot checker
         env:
-          # Override these if you want to monitor a different city/country/visa
-          CITY_SLUG:      "dubai"
-          VISA_TYPE:      "tourism"
-          TARGET_COUNTRY: "Luxembourg"
+          # Override these values if you want a different city/country/visa
+          CITY_SLUG:      "dubai"            # e.g., "abu-dhabi", "new-york"
+          VISA_TYPE:      "tourism"          # "tourism" or "business"
+          TARGET_COUNTRY: "Luxembourg"       # e.g., "Denmark", "Italy"
 
-          # These two must be added as GitHub Secrets in your repo settings
+          # These two must be set as GitHub Secrets in your repo settings
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           CHAT_ID:        ${{ secrets.CHAT_ID }}
 
-          # The script reads/writes its state file here
+          # Where the script reads & writes its state file
           STATE_FILE:     "last_state.json"
         run: |
           python check_schengen.py
@@ -53,9 +52,9 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add last_state.json
-          # If there is any diff staged, commit & push
+          # If there is any staged diff, commit & push
           git diff --cached --quiet || git commit -m "Update last_state.json"
           git push origin HEAD:main
         env:
-          # GITHUB_TOKEN is automatically available; it allows pushing commits
+          # GITHUB_TOKEN is automatically provided by GitHub Actions; it allows commit pushes
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
