--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -1,6 +1,5 @@
 name: "Schengen Slot Watcher"
 
-# Run every 5 minutes (minimum allowed by GitHub Actions), plus allow manual dispatch.
 on:
   schedule:
     - cron: "*/5 * * * *"
@@ -11,50 +10,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ─── 1. Checkout the repository ────────────────────────────────────────
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           persist-credentials: true
 
-      # ─── 2. Set up Python 3.x ─────────────────────────────────────────────
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
 
-      # ─── 3. Install required Python packages ─────────────────────────────
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      # ─── 4. Run the slot checker script ──────────────────────────────────
+      # ─── NEW DEBUG STEP: Show the first 20 lines of check_schengen.py ─────────────
+      - name: Show check_schengen.py contents
+        run: |
+          echo "------ BEGIN check_schengen.py ------"
+          sed -n '1,20p' check_schengen.py
+          echo "------- END check_schengen.py -------"
+      # ────────────────────────────────────────────────────────────────────────────────
+
       - name: Run Schengen slot checker
         env:
-          # Override these values if you want a different city/country/visa
-          CITY_SLUG:      "dubai"            # e.g., "abu-dhabi", "new-york"
-          VISA_TYPE:      "tourism"          # "tourism" or "business"
-          TARGET_COUNTRY: "Luxembourg"       # e.g., "Denmark", "Italy"
-
-          # These two must be set as GitHub Secrets in your repo settings
+          CITY_SLUG:      "dubai"
+          VISA_TYPE:      "tourism"
+          TARGET_COUNTRY: "Luxembourg"
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           CHAT_ID:        ${{ secrets.CHAT_ID }}
-
-          # Where the script reads & writes its state file
           STATE_FILE:     "last_state.json"
         run: |
           python check_schengen.py
 
-      # ─── 5. Commit updated last_state.json back to main if it changed ──
-      - name: Commit updated last_state.json if needed
+      - name: Commit updated state.json if needed
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add last_state.json
-          # If there is any staged diff, commit & push
           git diff --cached --quiet || git commit -m "Update last_state.json"
           git push origin HEAD:main
         env:
-          # GITHUB_TOKEN is automatically provided by GitHub Actions; it allows commit pushes
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
