--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ─── 0. (NEW) Print the entire workspace directory structure ────────────────
+      # ─── 0. (NEW) Print the entire workspace directory structure ────────────
       - name: Debug: List workspace files
         run: |
           echo "------ PWD ------"
@@ -18,32 +18,32 @@ jobs:
           echo "------ ls -R . ------"
           ls -R .
 
-      # ─── 1. Checkout repository ────────────────────────────────────────────────
+      # ─── 1. Checkout repository ─────────────────────────────────────────────
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           persist-credentials: true
 
-      # ─── 2. Set up Python ─────────────────────────────────────────────────────
+      # ─── 2. Set up Python ───────────────────────────────────────────────────
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
 
-      # ─── 3. Install dependencies ─────────────────────────────────────────────
+      # ─── 3. Install dependencies ───────────────────────────────────────────
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      # ─── 4. (NEW) Show the first 20 lines of check_schengen.py ────────────────
+      # ─── 4. (NEW) Show the first 20 lines of check_schengen.py ────────────
       - name: Show check_schengen.py contents
         run: |
           echo "------ BEGIN check_schengen.py (lines 1–20) ------"
           sed -n '1,20p' check_schengen.py
           echo "------- END check_schengen.py -------"
 
-      # ─── 5. Run the slot checker script ─────────────────────────────────────
+      # ─── 5. Run the slot checker script ───────────────────────────────────
       - name: Run Schengen slot checker
         env:
           CITY_SLUG:      "dubai"
@@ -55,7 +55,7 @@ jobs:
         run: |
           python check_schengen.py
 
-      # ─── 6. Commit updated state.json if needed ─────────────────────────────
+      # ─── 6. Commit updated state.json if needed ───────────────────────────
       - name: Commit updated state.json if needed
         run: |
           git config user.name "github-actions[bot]"
