--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -1,16 +1,66 @@
-name: Test
+name: "Schengen Slot Watcher"
 
 on:
-  release:
-    types: [created]
-  workflow_dispatch: # Put here!!
-  
+  schedule:
+    - cron: "*/5 * * * *"
+  workflow_dispatch:
+
 jobs:
-  build:
+  watch_slots:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      # 0. Debug: List everything in the workspace
+      - name: Debug: List workspace files
+        run: |
+          echo "PWD → $(pwd)"
+          echo "LISTING all files under current directory:"
+          ls -R .
 
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # 1. Checkout the repo
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+
+      # 2. Install Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      # 3. Install Python packages
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4
+
+      # 4. Debug: Show first 20 lines of check_schengen.py
+      - name: Show check_schengen.py contents
+        run: |
+          echo "----- BEGIN check_schengen.py (lines 1–20) -----"
+          sed -n '1,20p' check_schengen.py
+          echo "------ END check_schengen.py ------"
+
+      # 5. Run the slot‐checking script
+      - name: Run Schengen slot checker
+        env:
+          CITY_SLUG:      "dubai"
+          VISA_TYPE:      "tourism"
+          TARGET_COUNTRY: "Luxembourg"
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          CHAT_ID:        ${{ secrets.CHAT_ID }}
+          STATE_FILE:     "last_state.json"
+        run: |
+          python check_schengen.py
+
+      # 6. Commit last_state.json back if it changed
+      - name: Commit updated state.json if needed
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add last_state.json
+          git diff --cached --quiet || git commit -m "Update last_state.json"
+          git push origin HEAD:main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
