--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -10,39 +10,64 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 0. Debug: List everything in the workspace
-      - name: Debug List workspace files
-        run: |
-          echo "PWD → $(pwd)"
-          echo "LISTING all files under current directory:"
-          ls -R .
-
-      # 1. Checkout the repo
+      # ─── 1. Checkout repository ─────────────────────────────────────────────
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           persist-credentials: true
 
-      # 2. Install Python
+      # ─── 2. Set up Python ───────────────────────────────────────────────────
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
 
-      # 3. Install Python packages
-      - name: Install dependencies
+      # ─── 3. Install Python dependencies ────────────────────────────────────
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      # 4. Debug: Show first 20 lines of check_schengen.py
-      - name: Show check_schengen.py contents
-        run: |
-          echo "----- BEGIN check_schengen.py (lines 1–20) -----"
-          sed -n '1,20p' check_schengen.py
-          echo "------ END check_schengen.py ------"
+      # ─── 4. Set up Node.js & Playwright ────────────────────────────────────
+      - name: Install Node.js and Playwright
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+      - name: Install Playwright
+        run: npm install playwright
 
-      # 5. Run the slot‐checking script
+      # ─── 5. Render the page with Playwright and save to rendered.html ──────
+      - name: Render Schengen appointments HTML
+        run: |
+          node << 'EOF'
+          const { chromium } = require('playwright');
+          (async () => {
+            const browser = await chromium.launch({ headless: true });
+            const page = await browser.newPage();
+            await page.goto(`https://schengenappointments.com/in/${process.env.CITY_SLUG}/${process.env.VISA_TYPE}`, { timeout: 60000 });
+            // Wait until at least one <tr> appears in the table body.
+            // Adjust selector if necessary (e.g. wait for a specific country row or a table id)
+            await page.waitForSelector('tbody tr', { timeout: 60000 });
+            // Dump the fully rendered HTML to a file:
+            const html = await page.content();
+            const fs = require('fs');
+            fs.writeFileSync('rendered.html', html, 'utf-8');
+            await browser.close();
+          })();
+          EOF
+        env:
+          CITY_SLUG: "dubai"
+          VISA_TYPE: "tourism"
+
+      # ─── 6. (Optional) Show first 20 lines of rendered.html for debugging ───
+      - name: Debug: Show rendered HTML snippet
+        if: always()
+        run: |
+          echo "----- BEGIN rendered.html (lines 1-40) -----"
+          head -n 40 rendered.html
+          echo "------ END rendered.html ------"
+
+      # ─── 7. Run the slot checker script ───────────────────────────────────
       - name: Run Schengen slot checker
         env:
           CITY_SLUG:      "dubai"
@@ -54,7 +79,7 @@ jobs:
         run: |
           python check_schengen.py
 
-      # 6. Commit last_state.json back if it changed
+      # ─── 8. Commit updated state.json if needed ───────────────────────────
       - name: Commit updated state.json if needed
         run: |
           git config user.name "github-actions[bot]"
