--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -1,46 +1,47 @@
+# .github/workflows/check_schengen.yml
+
 name: "Schengen Slot Watcher"
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
-  workflow_dispatch:
+    - cron: "*/5 * * * *"      # every 5 minutes
+  workflow_dispatch:           # manual trigger
 
 jobs:
   watch_slots:
     runs-on: ubuntu-latest
 
     steps:
-      # 1) Checkout the repository so we have both check_schengen.py and rendered.html
+      # 1) Check out the repo (so we have check_schengen.py)
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: true
+          persist-credentials: true   # so we can push last_state.json back
 
-      # 2) Set up a Python environment for our script
-      - name: Set up Python
+      # 2) Install Python & pip packages
+      - name: Set up Python & install deps
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
-
-      # 3) Install the Python packages we need (requests, BeautifulSoup)
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      # 4) Install Node.js (for Playwright)
+      # 3) Install Node.js (needed for Playwright)
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "18"
 
-      # 5) Install Playwright and download the browser binaries
-      - name: Install Playwright + Browsers
-        run: |
-          npm install playwright
-          npx playwright install
+      # 4) Use the official Playwright Action to install browsers automatically
+      - name: Install Playwright browsers
+        uses: microsoft/playwright-github-action@v1
+        with:
+          # By default, this will install Chromium, WebKit, and Firefox for Playwright
+          playwright-version: "1.37.1"  # you can pin to the latest or a specific version
 
-      # 6) Use Playwright to open the live page (with JavaScript), wait for <tbody><tr>, and write out rendered.html
+      # 5) Render the live page (with JavaScript) into rendered.html
       - name: Render Schengen appointments HTML
         run: |
           node << 'EOF'
@@ -48,14 +49,13 @@ jobs:
           (async () => {
             const browser = await chromium.launch({ headless: true });
             const page = await browser.newPage();
-            // Go to the live site using our CITY_SLUG/VISA_TYPE
+            // Go to the live site:
             await page.goto(
               `https://schengenappointments.com/in/${process.env.CITY_SLUG}/${process.env.VISA_TYPE}`,
               { timeout: 60000 }
             );
-            // Wait until at least one <tr> appears inside the <tbody>
+            // Wait until at least one table row appears:
             await page.waitForSelector('tbody tr', { timeout: 60000 });
-            // Grab the fully-rendered HTML
             const html = await page.content();
             const fs = require('fs');
             fs.writeFileSync('rendered.html', html, 'utf-8');
@@ -66,15 +66,15 @@ jobs:
           CITY_SLUG: "dubai"
           VISA_TYPE: "tourism"
 
-      # 7) (Optional) Show the first 40 lines of rendered.html so we can confirm it really has a table
+      # 6) (Optional) Peek at rendered.html to verify it actually contains table rows
       - name: Debug  Show rendered HTML snippet
         if: always()
         run: |
-          echo "----- BEGIN rendered.html (lines 1–40) -----"
+          echo "----- FIRST 40 LINES OF rendered.html -----"
           head -n 40 rendered.html
-          echo "------ END rendered.html ------"
+          echo "------ END SNIPPET ------"
 
-      # 8) Run our Python script (which will now parse rendered.html instead of doing requests.get())
+      # 7) Run the Python script, which now reads rendered.html instead of doing requests.get()
       - name: Run Schengen slot checker
         env:
           CITY_SLUG:      "dubai"
@@ -86,7 +86,7 @@ jobs:
         run: |
           python check_schengen.py
 
-      # 9) If last_state.json changed, commit & push it back
+      # 8) If last_state.json changed, commit & push it back to main
       - name: Commit updated state.json if needed
         run: |
           git config user.name "github-actions[bot]"
