Fix file contents: separate workflow YAML and Python script

--- a/.github/workflows/check_schengen.yml
+++ b/.github/workflows/check_schengen.yml
@@ -2,22 +2,27 @@ name: "Schengen Slot Watcher"
 
 on:
   schedule:
-    - cron: "*/5 * * * *"      # run every 5 minutes
-  workflow_dispatch:           # allow manual trigger
+    - cron: "*/45 * * * *"   # every 45 minutes
+  workflow_dispatch:        # allow manual runs
 
 jobs:
   watch_slots:
     runs-on: ubuntu-latest
+
+    # ─── Use a matrix to run the same steps for both 'dubai' and 'abu-dhabi' ───
+    strategy:
+      matrix:
+        city: ["dubai", "abu-dhabi"]
 
     steps:
       # 1) Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: true   # needed for pushing last_state.json
+          persist-credentials: true   # needed for the final git push
 
       # 2) Set up Python and install pip dependencies
-      - name: Set up Python & Install dependencies
+      - name: Set up Python & Install Python deps
         uses: actions/setup-python@v4
         with:
           python-version: "3.x"
@@ -26,75 +31,65 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      # 3) Set up Node.js (needed for Playwright)
+      # 3) Set up Node.js (for Playwright)
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "18"
 
-      # 4) Install Playwright and all required system dependencies
+      # 4) Install Playwright + all system dependencies
       - name: Install Playwright + Browsers (with deps)
         run: |
           npm install playwright
           npx playwright install --with-deps
 
-      # 5) Render the live page (with JavaScript) into rendered.html
-      - name: Render Schengen appointments HTML
+      # 5) Render the live page for the current matrix city into rendered_<city>.html
+      - name: Render Schengen HTML for ${{ matrix.city }}
         run: |
           node << 'EOF'
           const { chromium } = require('playwright');
           (async () => {
             const browser = await chromium.launch({ headless: true });
             const page = await browser.newPage();
-            // Navigate to the live site using CITY_SLUG and VISA_TYPE
-            await page.goto(
-              `https://schengenappointments.com/in/${process.env.CITY_SLUG}/${process.env.VISA_TYPE}`,
-              { timeout: 60000 }
-            );
-            // Wait until at least one <tr> appears inside the <tbody>
+            // build the exact URL from the city slug and VISA_TYPE
+            const url = `https://schengenappointments.com/in/${process.env.CITY_SLUG}/${process.env.VISA_TYPE}`;
+            await page.goto(url, { timeout: 60000 });
             await page.waitForSelector('tbody tr', { timeout: 60000 });
-            // Grab the fully-rendered HTML and write to rendered.html
             const html = await page.content();
             const fs = require('fs');
-            fs.writeFileSync('rendered.html', html, 'utf-8');
+            fs.writeFileSync(`rendered_${process.env.CITY_SLUG}.html`, html, 'utf-8');
             await browser.close();
           })();
           EOF
         env:
-          CITY_SLUG: "dubai"
+          # override CITY_SLUG with the current matrix value:
+          CITY_SLUG: ${{ matrix.city }}
           VISA_TYPE: "tourism"
 
-      # 6) (Optional) Show first 40 lines of rendered.html for debugging
-      - name: Debug Show rendered HTML snippet
+      # 6) (Optional) Debug: show the first 40 lines of rendered_<city>.html
+      - name: Debug: Show rendered_${{ matrix.city }}.html snippet
         if: always()
         run: |
-          echo "----- BEGIN rendered.html (lines 1–40) -----"
-          head -n 40 rendered.html
-          echo "------ END rendered.html ------"
+          echo "----- BEGIN rendered_${{ matrix.city }}.html (lines 1–40) -----"
+          head -n 40 rendered_${{ matrix.city }}.html
+          echo "------ END rendered_${{ matrix.city }}.html ------"
 
-      # 7) Run the Python slot checker (which uses rendered.html if present)
-      - name: Run Schengen slot checker
+      # 7) Run our Python checker, pointing it at rendered_<city>.html and a state file unique to this city
+      - name: Run Schengen slot checker for ${{ matrix.city }}
         env:
-          CITY_SLUG:      "dubai"
+          CITY_SLUG:      ${{ matrix.city }}
           VISA_TYPE:      "tourism"
-          TARGET_COUNTRY: "Cyprus"
+          TARGET_COUNTRY: "Italy"
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           CHAT_ID:        ${{ secrets.CHAT_ID }}
-          STATE_FILE:     "last_state.json"
+          # Each city gets its own state file:
+          STATE_FILE:     "last_state_${{ matrix.city }}.json"
         run: |
           python check_schengen.py
 
-      # 8) Only commit last_state.json if it exists and has changed
-      - name: Commit updated state.json if needed
+      # 8) Only commit and push last_state_<city>.json if it exists & changed
+      - name: Commit updated last_state file if needed
         run: |
-          if [ -f last_state.json ]; then
+          if [ -f last_state_${{ matrix.city }}.json ]; then
             git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add last_state.json
-            git diff --cached --quiet || git commit -m "Update last_state.json"
-            git push origin HEAD:main
-          else
-            echo "No last_state.json to commit."
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            git config user.email "github-actions[bot]@users
